--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
+    <script src="javascripts/scale.fix.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -15,17 +16,18 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>FLightR</h1>
-        <p>R package for positioning of animals from solar geolocation archival tags</p>
-
-        <p class="view"><a href="https://github.com/eldarrak/FLightR">View the Project on GitHub <small>eldarrak/FLightR</small></a></p>
-
+        <h1 class="header">FLightR</h1>
+        <p class="header">R package for positioning of animals from solar geolocation archival tags</p>
 
         <ul>
-          <li><a href="https://github.com/eldarrak/FLightR/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/eldarrak/FLightR/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/eldarrak/FLightR">View On <strong>GitHub</strong></a></li>
+          <li class="download"><a class="buttons" href="https://github.com/eldarrak/FLightR/zipball/master">Download ZIP</a></li>
+          <li class="download"><a class="buttons" href="https://github.com/eldarrak/FLightR/tarball/master">Download TAR</a></li>
+          <li><a class="buttons github" href="https://github.com/eldarrak/FLightR">View On GitHub</a></li>
         </ul>
+
+        <p class="header">This project is maintained by <a class="header name" href="https://github.com/eldarrak">eldarrak</a></p>
+
+
       </header>
       <section>
         <h1>
@@ -65,11 +67,10 @@ the package is in the active development.</p>
 <p>I am also slowly developing <a href="https://github.com/eldarrak/FLightR/wiki">wiki pages for the package</a></p>
       </section>
       <footer>
-        <p>This project is maintained by <a href="https://github.com/eldarrak">eldarrak</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+        <p><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
       </footer>
     </div>
-    <script src="javascripts/scale.fix.js"></script>
-    
+    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
+		
   </body>
 </html>
